# py-biolm

./: .cursorignore  .cursorrules  .envrc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  ASYNC_COMPONENT_ANALYSIS.md  AUTHORS.rst  CLAUDE.md  CLUSTERING_IMPLEMENTATION.md  CLUSTERING_PERFORMANCE.md  COMPONENT_OPTIMIZATION_SUMMARY.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  PIPELINE_ARCHITECTURE_GUIDE.md  PIPELINE_QUICKSTART.md  PIPELINE_VISION_AND_ARCHITECTURE.md  README.md  README.rst  SETUP_GUIDE.md  TELEMETRY_PLAN.md  VERSIONING.md  WEBSOCKET_API_DOC_CORRECTIONS.md  build-docs.sh  build-vercel.sh  ci_docs_test.sh  deploy.sh  llms.txt  protocol.yaml  pyproject.toml  requirements_dev.txt  requirements_docs.txt  requirements_vercel.txt  setup.cfg  setup.py  setup.sh  test_pipeline_complete.py  test_progress_demo.py  (+3 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  publish.yml  test.yml
biolm/: __init__.py  api.py  asynch.py  auth.py  biolmai.py  cli.py  cli_entry.py  cli_theme.py  client.py  cls.py  const.py  datasets_mlflow.py  examples.py  models.py  progress.py  protocols.py  protocols_mlflow.py  volumes.py  workspaces.py
biolm/core/: __init__.py  asynch.py  auth.py  const.py  http.py  seqflow_auth.py  utils.py
biolm/hub/: __init__.py  catalog.py  config.py  discovery.py
biolm/io/: __init__.py  csv.py  fasta.py  json.py
biolm/pipeline/: PIPELINE_VISION_AND_ARCHITECTURE.md  README.md  __init__.py  base.py  data.py  datastore.py  datastore_duckdb.py  generative.py  mlm_remasking.py  pipeline_def.py  requirements.txt  visualization.py
biolm/server/: __init__.py  __main__.py  app.py  auth.py  catalog.py  process.py  proxy.py  runner.py  settings.py
biolmai/: __init__.py  api.py  asynch.py  auth.py  biolmai.py  cli.py  cli_entry.py  client.py  cls.py  const.py  datasets_mlflow.py  examples.py  finetune.py  models.py  payloads.py  protocol_runs.py  protocols.py  protocols_mlflow.py  seqflow_auth.py  telemetry_progress.py  volumes.py  watch.py  workspaces.py
biolmai/core/: __init__.py  asynch.py  auth.py  const.py  expression_evaluator.py  http.py  payloads.py  seqflow_auth.py  utils.py  validate.py
biolmai/io/: __init__.py  csv.py  fasta.py  json.py  pdb.py
biolmai/pipeline/: PIPELINE_VISION_AND_ARCHITECTURE.md  README.md  __init__.py  async_executor.py  base.py  clustering.py  data.py  datastore.py  datastore_duckdb.py  filters.py  generative.py  mlm_remasking.py  pipeline_def.py  utils.py  visualization.py
docs/: Makefile  ORPHANS_AND_DUPLICATES.md  async_sync.rst  authoring-guide.rst  batching.rst  biolm.rst  biolmai.rst  conf.py  disk_output.rst  error_handling.rst  faq.rst  features.rst  index.rst  installation.rst  make.bat  modules.rst  overview.rst  protocols.rst  pybiolm.rst  rate_limiting.rst
docs/_static/: custom.css  iframe-mode.css
docs/api-reference/: biolm.core.legacy.rst  biolm.core.rst  biolm.hub.rst  biolm.io.rst  biolm.pipeline.rst  biolm.rst  biolmai.biolmai.rst  biolmai.cli.rst  biolmai.core.asynch.rst  biolmai.core.auth.rst  biolmai.core.const.rst  biolmai.core.http.rst  biolmai.core.legacy.api.rst  biolmai.core.legacy.cls.rst  biolmai.core.legacy.rst  biolmai.core.payloads.rst  biolmai.core.rst  biolmai.core.seqflow_auth.rst  biolmai.core.utils.rst  biolmai.core.validate.rst  biolmai.io.rst  biolmai.ltc.rst  biolmai.models.rst  biolmai.protocols.rst  biolmai.rst  biolmai.volumes.rst  biolmai.workspaces.rst  index.rst
docs/api_docs/: index.md
docs/cli/: dataset.rst  hub.rst  login.rst  logout.rst  model.rst  overview.rst  protocol.rst  reference.rst  server.rst  status.rst  workspace.rst
docs/getting-started/: authentication.rst  concepts.rst  features.rst  installation.rst  migration-1.0.rst  overview.rst  quickstart.rst
docs/model-docs/: AbLang_Heavy_Chain_Res-coding.rst  AbLang_Heavy_Chain_Seq-coding.rst  BioLMTox.rst  DNABERT.rst  DNABert.rst  ESM-1V_test.rst  ESM-1v.rst  ESM-InverseFold.rst  ESM2_Embeddings.rst  ESMFold.rst  ESM_InverseFold.rst  Progen-2-OAS.rst  Progen-2_BFD90.rst  Progen-2_Medium.rst  Progen_2_BFD90.rst  Progen_2_Medium.rst  Progen_2_OAS.rst  ProtGPT-2.rst  ProtGPT2.rst  ProteInfer_EC.rst  ProteInfer_GO.rst  esm2_embeddings.rst  esm2_fold.rst  esm_1v_masking.rst  index.md  index.rst
docs/protocols/: about.rst  execution.rst  inputs.rst  output.rst  overview.rst  schema.rst  tasks.rst
docs/python-client/: api_biolm.rst  api_client.rst  async_sync.rst  faq.rst  (+13 more)
examples/: advanced_pipeline_example.py  simple_pipeline_example.py
notebooks/: pipeline_demo.ipynb  pipeline_demo_executed.ipynb
pybiolm/: LICENSE  Makefile  README.rst  __init__.py  cli.py  pybiolm.py  setup.cfg  tox.ini
schema/: protocol_schema.json
scripts/: demo_clustering_diversity.py  demo_explore_pipeline.py  demo_pipeline_500.py  deploy.sh  generate_docs_manifest.py  pipeline_advanced_example.py  pipeline_antibody_antifold.py  pipeline_antibody_full.py  pipeline_mlm_resume.py  pipeline_mpnn_multi.py  pipeline_peptide_embeddings.py  pipeline_petase_multimodel.py  pipeline_simple_example.py  pipeline_stability_engineering.py  run_real_models.py  run_real_pipelines.py  test_edge_pipelines.py  test_real_models.py  test_real_pipelines.py
tests/: README.md  __init__.py  benchmark_clustering.py  run_tests.py  test_abatch_calls.py  test_aclient.py  test_advanced_features.py  test_auth_integration.py  test_batch_error_retry.py  test_batch_errors.py  test_biolm_shim.py  test_biolmai.py  test_cli_hub.py  test_cli_model_io.py  test_cli_model_list.py  test_cli_model_run.py  test_cli_model_show.py  test_cli_server.py  test_cli_theme.py  test_client.py  test_clustering.py  test_concurrent_batches.py  test_const_env.py  test_datasets_mlflow.py  test_datastore.py  test_design_primitives.py  test_duckdb_datastore.py  test_embedding_pipeline.py  test_example_generation.py  test_filters.py  test_finetune.py  test_generation_workingset.py  test_hub_config.py  test_hub_discovery.py  test_init_extras_gate.py  test_integration.py  test_integration_dryrun.py  test_io.py  test_iterables.py  test_jupyter_context.py  (+29 more)
(+287 files in other folders)
