[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]  # all versions of python we support
line-length = 88
quiet = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py37"  # the lowest version of python we support
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "C90", # mccabe
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "W", # pycode warnings
]
extend-ignore = [
    "E501", # Let black handle line length
    "F821", # For need of global names
]
fix = true
exclude = [
    ".venv",
    # any other directories or files to exclude
]

[tool.flake8]
max-line-length = 88
exclude = ".venv"

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pip>=23.3"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project]
name = "biolmai"
version = "0.4.0"
description = "BioLM Python client"
authors = [
    { name="BioLM", email="support@biolm.ai" }
]
requires-python = ">=3.7"
readme = "README.rst"
license = { text = "Apache Software License 2.0" }
keywords = ["biolmai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "httpx>=0.23.2",
    "httpcore",
    "Click>=6.0",
    "requests",
    "aiodns",
    "synchronicity>=0.5.0; python_version >= '3.9'",
    "synchronicity<0.5.0; python_version < '3.9'",
    "typing_extensions; python_version < '3.9'",
    "aiohttp<=3.8.6; python_version < '3.12'",
    "aiohttp>=3.9.0; python_version >= '3.12'",
    "async-lru",
    "aiofiles",
    "cryptography",
    "h2",
    "nest_asyncio",
    "rich>=13.0.0",
    "pyyaml>=5.0",
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=3",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-randomly",
    "anyio==4.2.0; python_version >= '3.8'",
    "filelock>=3.12.2; python_version >= '3.8'",
    "pyproject-api==1.9.0; python_version >= '3.9'",
    "pyproject-api>=1.5.3; python_version < '3.9'",
    "black==22.3.0; python_version >= '3.8'",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine",
]
docs = [
    "pip<=22.4.2",
    "bump2version~=0.5.11",
    "wheel>0.37.0,<=0.42.0",
    "flake8==3.7.8",
    "watchdog==3.0.0",
    "tox>=3.26.0",
    "coverage>6.0,<=7.3.0",
    "Sphinx<=7.1.2",
    "twine<=4.0.2",
    "pytest~=6.2.4",
    "urllib3<=1.26.6",
    "sphinx-rtd-theme<=1.3.0",
    "sphinx-new-tab-link",
    "sphinx-reredirects",
    "docutils<=0.20.1,>=0.16",
    "furo<=2023.9.10",
    "pytest-randomly",
    "setuptools",
    "sphinx-design<=0.5.0",
    "pandas>=1.1.5",
    "importlib-metadata~=4.8.0",
    "sphinx-inline-tabs",
    "sphinxext-opengraph",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-click",
    "sphinx-jsonschema>=1.17.0",
]
[project.scripts]
biolmai = "biolmai.cli_entry:cli"

[project.entry-points."mlflow.request_header_provider"]
unused = "biolmai.core.seqflow_auth:BiolmaiRequestHeaderProvider"
