[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]
line-length = 88
quiet = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py37"
select = [
    "B",
    "C",
    "C90",
    "E",
    "F",
    "I",
    "UP",
    "W",
]
extend-ignore = [
    "E501",
    "F821",
]
fix = true
exclude = [
    ".venv",
]

[tool.flake8]
max-line-length = 88
exclude = ".venv"

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pip>=23.3"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project]
name = "biolm"
version = "1.0.0"
description = "BioLM Python client and local server"
authors = [
    { name="BioLM", email="support@biolm.ai" }
]
requires-python = ">=3.8"
readme = "README.rst"
license = { text = "Apache Software License 2.0" }
keywords = ["biolm", "biolmai", "bioai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "httpx>=0.23.0",
    "httpcore",
    "Click>=6.0",
    "requests",
    "aiodns",
    "synchronicity>=0.5.0; python_version >= '3.9'",
    "synchronicity<0.5.0; python_version < '3.9'",
    "typing_extensions; python_version < '3.9'",
    "aiohttp<=3.8.6; python_version < '3.12'",
    "aiohttp>=3.9.0; python_version >= '3.12'",
    "async-lru",
    "aiofiles",
    "cryptography",
    "h2",
    "nest_asyncio",
    "rich>=13.0.0",
    "pyyaml>=5.0",
    "jsonschema>=4.0,<5",
]
scripts = { biolm = "biolm.cli_entry:cli", biolmai = "biolm.cli_entry:cli" }

[project.entry-points."mlflow.request_header_provider"]
biolm = "biolm.core.seqflow_auth:BiolmRequestHeaderProvider"
unused = "biolm.core.seqflow_auth:BiolmaiRequestHeaderProvider"

[project.optional-dependencies]
pipeline = [
    "pandas>=1.3.0,<3",
    "numpy>=1.20,<3",
    "tqdm>=4.60.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0",
    "umap-learn>=0.5.0",
    "biotite>=0.34.0",
    "biopython>=1.78",
    "scipy>=1.7.0",
    "duckdb>=0.9.0,<2",
    "pyarrow>=10.0.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "modal>=0.64.0",
]
